[package]
name = "replace_xlsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version="1.0.71", features = ["backtrace"]}
clap = { version = "4.2.2", features = ["derive"] }
image = "0.24.6"
quick-xml = { version = "0.28.2", features = [ "serialize" ] }
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
zip = "0.6.4"